--- a/app/src/main/res/layout/activity_cargo_report.xml
+++ b/app/src/main/res/layout/activity_cargo_report.xml
@@ -135,7 +135,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/label_start_date"
                 android:text="Başlangıç tarihi"
-                android:textColor="@color/white"
+                android:textColor="@color/colorAccent"
                 android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -171,7 +171,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/label_end_date"
                 android:text="Bitiş tarihi"
-                android:textColor="@color/white"
+                android:textColor="@color/colorAccent"
                 android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
