--- a/app/src/main/res/layout/dialog_searchable_picker.xml
+++ b/app/src/main/res/layout/dialog_searchable_picker.xml
@@ -41,6 +41,7 @@
             android:id="@+id/rv_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintHeight_max="350dp"
             android:layout_marginTop="10dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/et_search"
