--- a/app/src/main/res/layout/activity_calling.xml
+++ b/app/src/main/res/layout/activity_calling.xml
@@ -14,6 +14,12 @@
         android:id="@+id/rvVillaList"
         tools:listitem="@layout/item_villa"/>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/toolbar_shade"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/toolbarLayout"
         android:layout_width="match_parent"
@@ -63,6 +69,12 @@
         </eightbitlab.com.blurview.BlurView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/bottom_shade"/>
 
     <eightbitlab.com.blurview.BlurView
         android:layout_width="match_parent"
