--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,117 +13,140 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/toolbar_shade"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/toolbarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/content_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/content_title"
+            android:layout_marginStart="16dp"
             android:text="Villa Listesi"
             android:textColor="@color/white"
             android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <eightbitlab.com.blurview.BlurView
+            android:id="@+id/blur_toolbar_buttons"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:id="@+id/blur_toolbar_buttons"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/background_blur"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/toolbar_button_layout"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/toolbar_button_layout">
+                android:layout_height="match_parent">
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/btn_search"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:contentDescription="Ara"
-                    android:src="@drawable/ic_search"
                     android:padding="10dp"
-                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/ic_search"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/btn_whatsapp"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/btn_whatsapp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:contentDescription="WhatsApp"
+                    android:padding="11dp"
+                    android:src="@drawable/whatsapp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btnMore"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/btnMore"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:contentDescription="Daha Fazla"
-                    android:src="@drawable/ic_more"
                     android:padding="10dp"
+                    android:src="@drawable/ic_more"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/btnCancel"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:contentDescription="İptal"
-                    android:src="@drawable/ic_close"
                     android:padding="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/ic_close"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:visibility="gone"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </eightbitlab.com.blurview.BlurView>
 
         <eightbitlab.com.blurview.BlurView
+            android:id="@+id/blur_searchbox"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/blur_toolbar_buttons"
-            android:id="@+id/blur_searchbox"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/background_edittext"
             android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@id/blur_toolbar_buttons"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible">
 
             <EditText
+                android:id="@+id/etSearch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/etSearch"
                 android:background="@android:color/transparent"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:hint="Villa Ara"
-                android:textColorHint="@color/white"
                 android:drawableStart="@drawable/ic_search"
+                android:hint="Villa Ara"
                 android:paddingStart="10dp"
-                android:paddingEnd="52dp"/>
+                android:paddingEnd="52dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="16sp" />
 
             <ImageView
+                android:id="@+id/btnClearBox"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:id="@+id/btnClearBox"
-                android:src="@drawable/ic_close"
-                android:padding="10dp"
                 android:layout_gravity="center_vertical|end"
-                android:visibility="gone"/>
+                android:padding="10dp"
+                android:src="@drawable/ic_close"
+                android:visibility="gone" />
 
         </eightbitlab.com.blurview.BlurView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/bottom_shade"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
