--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
-        android:paddingTop="55dp">
+        android:clipToPadding="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -126,7 +126,7 @@
                 android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@id/layout_server_settings"
                 android:layout_marginTop="10dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 tools:visibility="visible">
 
                 <TextView
@@ -240,15 +240,64 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/layout_performance_settings"
+                android:background="@drawable/background_window"
+                android:layout_marginHorizontal="16dp"
+                android:padding="16dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_device_settings"
+                android:layout_marginTop="10dp"
+                android:visibility="visible"
+                tools:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/title_performance_settings"
+                    android:text="Performans"
+                    android:textSize="21sp"
+                    android:textColor="@color/colorAccent"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/switch_less_animations"
+                    android:text="Animasyonları azalt"
+                    android:textSize="17sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/title_performance_settings"
+                    android:layout_marginStart="9dp"
+                    android:layout_marginEnd="9dp"
+                    android:layout_marginTop="10dp"/>
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/switch_less_blur"
+                    android:text="Cam efekti"
+                    android:textSize="17sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/switch_less_animations"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="9dp"
+                    android:layout_marginEnd="9dp"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/label_app_version"
-                android:text="SecuAsist\nversiyon 0.16.3-beta3\n\nDerleme tarihi: 30 Eylül 2025"
+                android:text="SecuAsist\nversiyon 0.17.0-beta4\n\nDerleme tarihi: 6 Ekim 2025"
                 android:gravity="center"
                 android:textSize="11sp"
                 android:textColor="@color/textColorSecondary"
-                app:layout_constraintTop_toBottomOf="@id/layout_device_settings"
+                app:layout_constraintTop_toBottomOf="@id/layout_performance_settings"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"/>
@@ -256,6 +305,12 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/toolbar_shade"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/toolbarLayout"
@@ -307,5 +362,11 @@
             android:layout_marginStart="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/bottom_shade"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
