--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -278,8 +278,8 @@
                 <androidx.appcompat.widget.SwitchCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/switch_less_blur"
-                    android:text="Cam efekti"
+                    android:id="@+id/switch_blur"
+                    android:text="Bulanıklık efekti"
                     android:textSize="17sp"
                     android:textColor="@color/white"
                     app:layout_constraintTop_toBottomOf="@id/switch_less_animations"
@@ -293,7 +293,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/label_app_version"
-                android:text="SecuAsist\nversiyon 0.17.0-beta4\n\nDerleme tarihi: 6 Ekim 2025"
+                android:text="SecuAsist\nversiyon 0.17.1-beta4\n\nDerleme tarihi: 7 Ekim 2025"
                 android:gravity="center"
                 android:textSize="11sp"
                 android:textColor="@color/textColorSecondary"
